# airflow-ext

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml  semantic.yml
airflow_ext/: main.py  pass_through.py  wrapper.py
airflow_extension/: airflow.py  main.py
cookiecutter/wrapper-template/: cookiecutter.json
cookiecutter/wrapper-template/{{cookiecutter.wrapper_id}}/: pyproject.toml
cookiecutter/wrapper-template/{{cookiecutter.wrapper_id}}/{{cookiecutter.library_name}}/: __init__.py  main.py  pass_through.py  wrapper.py
ext_airflow/: __init__.py  airflow.py  main.py  pass_through.py  wrapper.py
files_airflow_ext/: __init__.py  dot-gitignore
files_airflow_ext/orchestrate/: README.md  meltano.py
meltano_extension_sdk/: extension.py  logging.py  process.py
