[tool.poetry]
name = "airflow-ext"
version = "0.1.0"
description = "Airflow utility extension for Meltano"
authors = ["Meltano Team and Contributors"]
maintainers = ["Meltano Team and Contributors"]
readme = "README.md"
repository = "https://github.com/meltano/airflow-ext"

license = "Apache 2.0"

packages = [
    { include = "airflow_ext" },
    { include = "files_airflow_ext"},
]

include = [
    "files_airflow_ext/orchestrate/meltano.py",
    "files_airflow_ext/orchestrate/README.md",
]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
typer = "^0.6.1"
"meltano.edk" = {git = "https://github.com/meltano/edk.git", rev = "main"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^3.9.0"
cookiecutter = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "airflow_ext"

[tool.poetry.scripts]
airflow_extension = 'airflow_ext.main:app'
airflow_invoker = 'airflow_ext.pass_through:pass_through_cli'
