[tool.poetry]
name = "airflow-ext"
version = "0.1.0"
description = "Airflow utility extension for Meltano"
authors = ["Meltano Team and Contributors"]
maintainers = ["Meltano Team and Contributors"]
readme = "README.md"
repository = "https://github.com/meltano/airflow-ext"

license = "Apache 2.0"

packages = [
    { include = "airflow_ext" },
    { include = "files_airflow_ext"},
]

include = [
    "files_airflow_ext/orchestrate/meltano.py",
    "files_airflow_ext/orchestrate/README.md",
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
structlog = ">=20.1.0"
typer = "^0.12.0"
"meltano.edk" = "~=0.4.1"

[tool.poetry.group.dev.dependencies]
apache-airflow = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
airflow_extension = 'airflow_ext.main:app'
airflow_invoker = 'airflow_ext.pass_through:pass_through_cli'

[tool.ruff]
ignore = [
  "ANN101",
]
line-length = 120
select = [
  "E",
  "F",
  "B",
  "I",
  "ANN",
  "D",
  "UP",
]
target-version = "py38"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["typer.Option"]

[tool.ruff.pydocstyle]
convention = "google"
