[tool.poetry]
name = "airflow-ext"
version = "0.1.0"
description = "Airflow utility extension for Meltano"
authors = ["Meltano Team and Contributors"]
maintainers = ["Meltano Team and Contributors"]
readme = "README.md"
repository = "https://github.com/meltano/airflow-ext"

license = "Apache-2.0"

packages = [
    { include = "airflow_ext" },
    { include = "files_airflow_ext"},
]

include = [
    "files_airflow_ext/orchestrate/meltano.py",
    "files_airflow_ext/orchestrate/README.md",
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
structlog = ">=20.1.0"
typer = "^0.15.3"
"meltano.edk" = "~=0.4.4"

[tool.poetry.group.dev.dependencies]
apache-airflow = ">=2.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
airflow_extension = 'airflow_ext.main:app'
airflow_invoker = 'airflow_ext.pass_through:pass_through_cli'

[tool.ruff]
line-length = 120
select = [
  "E",
  "F",
  "B",
  "I",
  "ANN",
  "D",
  "UP",
  "DOC",
]
target-version = "py38"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["typer.Option"]

[tool.ruff.pydocstyle]
convention = "google"
